tests/machine/x/ocaml/str_builtin.ml

let () =
  print_endline str 123
